--- a/lib/projects.json
+++ b/lib/projects.json
@@ -24,22 +24,26 @@
         "description": "Mollitia eos accusantium maiores reiciendis ad aspernatur voluptate dolore iure perspiciatis veritatis quia, pariatur unde vitae quae laudantium asperiores fuga? Asperiores sapiente possimus cum! Nobis eum quisquam natus inventore soluta?"
     },
     {
-        "title": "Error quia tempora iusto!",
+        "title": "DSC 106 Project 1",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Perspiciatis rem optio, ea, reiciendis est corrupti pariatur qui dolorum accusantium animi commodi, recusandae consequuntur cumque vel ducimus iste? Ipsum ullam ea inventore consectetur enim! Ullam doloribus dignissimos vel dolore!"
     },
     {
-        "title": "Ab architecto natus soluta?",
+        "title": "DSC 106 Project 2",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Excepturi soluta deserunt adipisci numquam impedit corporis atque eum placeat sed, tenetur, in error cum dolorem voluptatem? Odio voluptate expedita atque dolorem, quas reprehenderit sunt accusamus commodi assumenda veritatis recusandae!"
     },
     {
-        "title": "Similique at vitae nemo!",
+        "title": "DSC 148 Project",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Optio iusto ut quidem, nesciunt quis delectus, saepe excepturi ab aliquid veniam eligendi ipsam. Eos iste quaerat unde repellat error tenetur odio minima veritatis! Iure id at possimus commodi hic!"
     },
     {
-        "title": "Ipsam qui dolore perspiciatis.",
+        "title": "COGS 108 Project",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Voluptates cupiditate, alias eius eos rem reprehenderit ipsam. Corporis voluptate tempore doloremque, dolorum sed culpa natus blanditiis deserunt, illum ad amet ratione ipsum at voluptatibus quaerat, excepturi distinctio exercitationem quas."
     },
