--- a/lib/projects.json
+++ b/lib/projects.json
@@ -48,22 +48,26 @@
         "description": "Voluptates cupiditate, alias eius eos rem reprehenderit ipsam. Corporis voluptate tempore doloremque, dolorum sed culpa natus blanditiis deserunt, illum ad amet ratione ipsum at voluptatibus quaerat, excepturi distinctio exercitationem quas."
     },
     {
-        "title": "Ipsum numquam amet facere!",
+        "title": "DSC 148 Data Mining Challenge" ,
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Blanditiis temporibus laudantium est ipsam quis asperiores tenetur officia quibusdam dolorem placeat eligendi fugit totam reprehenderit labore cum atque debitis animi, ratione repudiandae ea minus quia molestias odit laboriosam. Doloremque."
     },
     {
-        "title": "Repellendus libero alias odio.",
+        "title": "CS 105 Survey",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Deleniti aspernatur distinctio doloribus. Expedita facere ratione debitis voluptates eius vel ipsam quibusdam accusantium itaque, dicta hic rerum enim. Quae doloremque ipsum rem alias eum reprehenderit, nostrum quo dicta commodi?"
     },
     {
-        "title": "Aliquid perspiciatis esse sint.",
+        "title": "AI Chatbot",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Saepe assumenda odit maiores nulla velit nisi eius enim harum voluptas iste? Odit quas alias qui, veniam fugiat dolorem consequatur aliquid! Obcaecati saepe ullam mollitia repellat quia, rem iure quam."
     },
     {
-        "title": "Voluptates assumenda accusamus et?",
+        "title": "Calorie Tracker",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Soluta quis delectus nam dolores nostrum omnis adipisci reiciendis recusandae, atque animi illo praesentium labore perferendis numquam quisquam et. Ad laborum iusto quo deserunt, velit quaerat recusandae impedit expedita itaque?"
     }
